k8s-spring/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-demo-service
spec:
  selector:
    app.kubernetes.io/name: spring-boot-demo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
